Pankaj | spacing issue in textarea in notes

--- a/ui/app/styles/clinical/_observations.scss
+++ b/ui/app/styles/clinical/_observations.scss
@@ -66,7 +66,7 @@
             margin-right: 0;
         }
         .offset-label {
-          margin-left: -10px;
+          //margin-left: -10px;
         }
       }
     }
